prometheus-operator-k8s/tf/subnets.tf
resource "aws_subnet" "private_eu_north_1a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/19"
  availability_zone = "eu-north-1a"

  tags = {
    "Name"                            = "private-eu-north-1"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/cluster/demo"      = "owned"
  }
}

resource "aws_subnet" "private_eu_north_1b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.32.0/19"
  availability_zone =  "eu-north-1b"

  tags = {
    "Name"                            = "private-eu-north-1b"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/role/cluster/demo" = "owned"
  }
}

resource "aws_subnet" "public_eu_north_1a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.64.0/19"
  availability_zone = "eu-north-1a"
  map_public_ip_on_launch = true 

  tags = {
    "Name"                            = "public-eu-north-1a"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/role/cluster/demo" = "owned"   
  }
}

resource "aws_subnet" "public_eu_north_1b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.96.0/19"
  availability_zone = "eu-north-1b" 
  map_public_ip_on_launch = true

  tags = {
    "Name"                            = "public-eu-north-1b"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/role/cluster/demo" = "owned" 
  }
}
